welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:3: error: ')' expected but 'else' found.
	else { false }
        ^